--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content=" ">
-  <link rel="canonical" href="https://nftup.info/">
+  <link rel="canonical" href="#">
   <meta property="og:title" content="Yyds - Discover, Mint, And Share Your Unique NFTs">
   <meta property="og:description" content=" ">
   <meta property="og:image" content="images/og.png">
@@ -474,7 +474,7 @@
                 <!-- <a href="tel:+1-485-456-0102">+1-485-456-0102</a>
                 <span>Or</span> -->
                 <a href="mailto: yydsfinance@team.com">
-                  support@nftup.info                </a>
+                  yydsfinance@team.com                </a>
               </h2>
             </div>
           </div>
@@ -508,9 +508,9 @@
           <div class="single-footer-widget">
             <a href="javascript:void(0)" class="logo">
               <img class="logoImage" src="images/yyds.png" alt="image" style="height: 39px;">
-              <!-- <h2>NFTup</h2> -->
+              <!-- <h2>YYDS</h2> -->
             </a>
-            <p>NFTup application is the provider that allows you to mint on the major blockchains directly from your
+            <p>YYDS application is the provider that allows you to mint on the major blockchains directly from your
               phone</p>
           </div>
         </div>
@@ -562,7 +562,7 @@
         <p>
           YYDS - All rights Reserved - Scanner Translator Limited - 1 Beauchamp court - EN55TZ - 13369707
           <!-- <a href="#" target="_blank">
-            NFTup          </a> -->
+            YYDS          </a> -->
         </p>
       </div>
     </div>
