--- a/index.html
+++ b/index.html
@@ -344,18 +344,15 @@
   <section id="faq" class="faq-area ptb-100">
     <div class="container">
       <div class="section-title">
-        <h2>Frequently Asked Questions</h2>
+        <h2>YYDSNOMICS</h2>
         <div class="bar"></div>
         <p>
-          Obviously, you have some burning questions in your head about YYDS, how the wallet works, and NFTs in
-          general.
-          We answer them all!
+          NAME : YYDS
         </p>
+        <P>SYMBOL : $YYDS</P>
+        <p>Contract Address : 0xE3326383ba74DAd577578B2A582C969C9363399b</p>
       </div>
-      <div class="row align-items-center">
-        <div class="col-lg-6">
-          <div class="faq-accordion-content">
-            <ul class="accordion" id="faqData"></ul>
+  
           </div>
         </div>
         <div class="col-lg-6">
