--- a/index.html
+++ b/index.html
@@ -516,17 +516,17 @@
             <h3>Company</h3>
             <ul class="list">
               <li>
-                <a href="https://www.iubenda.com/terms-and-conditions/35995848" target="_blank">
+                <a href="#" target="_blank">
                   Terms &amp; Conditions
                 </a>
               </li>
               <li>
-                <a href="https://www.iubenda.com/privacy-policy/35995848" target="_blank">
+                <a href="#" target="_blank">
                   Privacy Policy
                 </a>
               </li>
               <li>
-                <a href="https://www.iubenda.com/privacy-policy/35995848/cookie-policy" target="_blank">
+                <a href="#" target="_blank">
                   Cookie Policy
                 </a>
               </li>
